--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title> Cephas Yirobi</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="public/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
   </head>
 
