l add a facion image

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
   <head>
     <meta charset="utf-8">
     <title> Cephas Yirobi</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="public/favicon.ico">
+    <link rel="stylesheet" href="public/css/styles.css">
+    <link rel="icon" href="public/images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <div class="container">
       <div class="Top-container">
-        <img class="Top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class="Top-cloud" src="public/images/cloud.png" alt="cloud-img">
         <h1>I'm Cephas.</h1>
         <h2>a web designer.</h2>
-        <img class="Bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img class="mountain-img" src="images/mountain.png" alt="mountain-img">
+        <img class="Bottom-cloud" src="public/images/cloud.png" alt="cloud-img">
+        <img class="mountain-img" src="public/images/mountain.png" alt="mountain-img">
 
       </div>
 
       <div class="Middle-container">
         <div class="profile">
-          <img class="profile-img" src="images/yirobi_circle photo1.png" alt="profile picture">
+          <img class="profile-img" src="public/images/yirobi_circle photo1.png" alt="profile picture">
           <h2>Hello.</h2>
           <p class="Intro">l'm a web designer/developer based in coimbatore, Tamil Nadu state, lndia. l have a passion for web design and love to create for web,mobile and other devices.</p>
         </div>
@@ -30,12 +30,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="coding-img" src="images/coding.png" alt="coding-img">
+            <img class="coding-img" src="public/images/coding.png" alt="coding-img">
             <h3>what l can do.</h3>
             <p>web developer, iOS developer, Database developer,Android developer,UI Design, User lnterface,User Experience design and UX design</p>
           </div>
           <div class="skill-row">
-            <img class="webpage-img" src="images/webpage.png" alt="webpage-img">
+            <img class="webpage-img" src="public/images/webpage.png" alt="webpage-img">
             <h3>Develop what you need.</h3>
             <p>l'm a developer, so l know how to create your website to run across devices using the latest technologies available.</p>
           </div>
